fixed search spacing issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,7 +24,7 @@ h4 {
 
 h5 {
   color: white;
-  font-size: 15px;
+  font-size: 13px;
   text-align: center;
   font-family: 'Orbitron', sans-serif;
 }
